# trading-signal-analyzer

./: .gitignore  API_SETUP_GUIDE.md  CHANGELOG.md  CHANGELOG_V093_ADDITION.md  COMPLETE_PACKAGE_README.md  DARK_FLOW_INTEGRATION_GUIDE.md  DEPLOYMENT_SUMMARY.md  ENHANCED_DARK_FLOW_SUMMARY.md  GITHUB_RELEASE_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  INDEX.md  INSTALL.md  INTEGRATION_NOTES.md  INTEGRATION_STATUS.md  MANIFEST.in  MASTER_README.md  MIGRATION_GUIDE_v1_to_v2.md  NEW_5_PILLARS.md  PACKAGE_README.md  POLYGON_SETUP_GUIDE.md  QUICK_REFERENCE_CARD.md  QUICK_START_DARK_FLOW.md  README.md  RELEASE_NOTES_v1.0.md  START_HERE.md  V093_DARK_FLOW_UPDATE_INSTRUCTIONS.md  V093_RELEASE_SUMMARY.md  build_integrated_version.py  create_integrated_file.sh  enhanced_dark_flow_scanner.py  project_summary.md  pyproject.toml  requirements.txt  setup.py  test_market_routing.py  test_modular.py  test_new_features.py  trading_signal_analyzer.py
trading_analyzer/: __main__.py  config.py  main.py
trading_analyzer/core/: analysis.py  scanner.py
trading_analyzer/data/: cache.py  database.py  filters.py  finviz_crypto.py  hybrid_provider.py  polygon_provider.py  providers.py
trading_analyzer/predictive/: __init__.py  fibonacci.py  insider_trading.py  news_sentiment.py
trading_analyzer/scanners/: darkflow.py  momentum.py  pressurecooker.py  pressurecooker_enhanced.py
trading_analyzer/ui/: cli.py  display.py
trading_analyzer/utils/: __init__.py  charts.py  export.py  formatting.py  parallel.py  prefilter.py  technical.py  ticker_utils.py  validation.py
